image aligned correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,7 @@ flex-wrap: wrap;
 
 .grid {
   display: grid;
-  /*grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));*/
-  grid-auto-flow: column;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   min-width: 500px;
   max-width :1100;
 }
@@ -17,43 +16,51 @@ img {
   height: 100%;
   width: 100%;
 }
-
+.face {
+  width: 89%;
+  height:79%;
+  margin-left: 35px;
+}
 
 figure {
   display: flex;
 
 }
+.third {
+  grid-row: span 2;
+}
+.sixth {
+  grid-column: 1 / -1;
+}
+/*
 .first {
   grid-column : 1;
-  /*grid-column-end: 2;*/
+  grid-column-end: 2;
   grid-row: 1;
  }
 
 .second {
   grid-column: 2;
-  /*grid-column-end: 3;*/
+  
   grid-row: 1;
 }
 
 .third {
-  grid-column: 1;
-  /*grid-column-end:2;*/
-  grid-row: 2 /span 2;
+  grid-column: 3;
+  
+  grid-row: 2 /span;
 
 }
 
 .fourth {
-  grid-column: 2;
-  /*grid-column-end:3;
-  grid-row-start: 2;*/
-  grid-row:  2 / 3;
+  grid-column: 1;
+
+  grid-row:  2 / -1;
 }
 .fifth {
   grid-column: 2;
-  /*grid-column-end:3;
-  grid-row-start: 3;*/
   grid-row-end: 3 / 4;
 }
-
+*/
 
  
